tests/fixtures/invalid/hex_dict.py
# Cannot call hex() with Dict[str, int]
x = hex({"a": 1})
